# rosalind_rust

./: .gitignore  Cargo.toml  Manifest.toml  perm.py  rosalind_gc.txt  testrs.rs
fqparser/: Cargo.toml
fqparser/src/: lib.rs  main.rs  not_main.rs
src/: CRUD.rs  GRPH.rs  LEXV.rs  PERM.rs  design_pattern_fastq.rs  enumerate_kmers.rs  fq.rs  gc_content.rs  hamming.rs  iev.rs  lcsm.rs  lib.rs  main.rs  mendelian.rs  mod.rs  nucleotide_counter.rs  rabbits.rs  reverse_complement.rs  rosalind_claude.rs  rosalind_rust.code-workspace  test.rs  transcribe_dna.rs
