[package]
name = "rosalind_rust"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"

[[bin]]
name = "nucleotide_counter"
path = "src/nucleotide_counter.rs"

[[bin]]
name = "transcribe_dna"
path = "src/transcribe_dna.rs"

[[bin]]
name = "reverse_complement"
path = "src/reverse_complement.rs"

[[bin]]
name = "gc_content"
path = "src/gc_content.rs"
