[package]
name = "rosalind_exercises"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
bio = "1.5.0"
rayon = "1.8.0"
needletail = "0.5.1"
anyhow = "1.0.79"
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
memmap = { version = "0.7.0", features = ["nightly"] }
